# OxidizedSnakeC2

./: .gitignore  Cargo.toml  README.MD
instance/: dataschmace.db
python/server/src/: app.py  models.py
python/src/: app.py
recon/src/: host_system.rs  main.rs
